Fixed the code.literal style to wrap correctly on line

--- a/docs/_static/css/index.css
+++ b/docs/_static/css/index.css
@@ -51,6 +51,10 @@
   position: unset;
 }
 
+.rst-content code.literal {
+  white-space: nowrap;
+}
+
 @media screen and (max-width: 768px) {
   .wy-nav-side {
     left: -300px;
